Kosticonnect heroo image update

--- a/frontend/app/scss/pages/_kosticonnect.scss
+++ b/frontend/app/scss/pages/_kosticonnect.scss
@@ -290,7 +290,7 @@
 
         &:after {
             content: '';
-            background: rgba(0, 0, 0, 0.5);
+            background: rgba($kosticonnect-primary3, 0.3);
             position: absolute;
             left: 0;
             right: 0;
