Added agreement text

--- a/frontend/app/scss/pages/_myGamesStep1-2.scss
+++ b/frontend/app/scss/pages/_myGamesStep1-2.scss
@@ -260,6 +260,10 @@
                 border-color: #0095f8;
             }
         }
+
+        &-agreement {
+            margin-top: 15px;
+        }
     }
 
     &-activate_ticket {
