--- a/app/src/main/resources/site/pages/mails/components/header.html
+++ b/app/src/main/resources/site/pages/mails/components/header.html
@@ -2,8 +2,8 @@
     <td style="padding: 40px 0;">
         <a data-th-href="${portal.pageUrl({'_path=' + site._path, '_type=absolute'})}" title="Вечерние кости"
             style="text-decoration: none;">
-            <img src="#" data-th-src="${portal.assetUrl({'_path=images/mail-logo.png', '_type=absolute'})}"
-                color="#707070" height="38px" />
+            <img data-th-src="${portal.assetUrl({'_path=images/vk_logotype17.png', '_type=absolute'})}" color="#707070"
+                height="38px" />
         </a>
     </td>
 </tr>
