--- a/frontend/app/scss/pages/_myGamesStep1-2.scss
+++ b/frontend/app/scss/pages/_myGamesStep1-2.scss
@@ -261,7 +261,7 @@
             }
         }
 
-        &-agreement {
+        .my_games-form &-agreement.form-caption {
             margin-top: 15px;
         }
     }
