--- a/app/src/main/resources/site/pages/mails/components/footer.html
+++ b/app/src/main/resources/site/pages/mails/components/footer.html
@@ -39,8 +39,7 @@
                             alt="twitch" color="#707070" width="16px" />
                     </a>
                 </td>
-                <td
-                    style="color: #505050; font-family: Roboto; font-size: 14px; text-align: right; padding-right: 5px;">
+                <td style="color: #505050; font-family: Arial; font-size: 14px; text-align: right; padding-right: 5px;">
                     Вечерние Кости 2020
                 </td>
             </tr>
