Update email template

--- a/app/src/main/resources/site/pages/mails/components/header.html
+++ b/app/src/main/resources/site/pages/mails/components/header.html
@@ -1,9 +1,9 @@
 <tr>
-    <td style="padding: 40px 0;">
-        <a data-th-href="${portal.pageUrl({'_path=' + site._path, '_type=absolute'})}" title="Вечерние кости"
+    <td style="padding: 24px 0;text-align: center;">
+        <a data-th-href="${portal.pageUrl({'_path=' + site._path, '_type=absolute'})}" title="Вечерние кости" target="_blank"
             style="text-decoration: none;">
-            <img data-th-src="${portal.assetUrl({'_path=images/vk_logotype17.png', '_type=absolute'})}" color="#707070"
-                height="38px" />
+            <img data-th-src="${portal.assetUrl({'_path=images/mails/vk_logo.png', '_type=absolute'})}" color="#fff"
+                height="73px" />
         </a>
     </td>
 </tr>
