--- a/app/src/main/resources/site/pages/mails/components/footer.html
+++ b/app/src/main/resources/site/pages/mails/components/footer.html
@@ -1,46 +1,51 @@
 <tr>
-    <td style="padding: 0 0 20px;">
+    <td style="background: #F7F9FC;border-radius: 0px 0px 4px 4px; padding: 32px;">
         <table border="0" cellpadding="0" cellspacing="0" width="100%">
             <tr>
-                <td>
-                    <a href="https://www.facebook.com/vecherniyekosti/" title="facebook"
-                        style="text-decoration: none; display: inline-block; padding: 5px; vertical-align: middle;">
-                        <img src="#" data-th-src="${portal.assetUrl({'_path=images/mails/fb.gif', '_type=absolute'})}"
-                            alt="facebook" color="#707070" width="16px" />
+                <td style="color: #8A7C90; font-family: Arial; font-size: 16px; text-align: left; padding-right: 16px;">
+                    © Вечерние Кости 2022
+                </td>
+                <td style="text-align: right;">
+                    <a href="https://discord.gg/VfDthGK" title="discord" target="_blank"
+                        style="text-decoration: none; display: inline-block; padding: 4px; vertical-align: middle;">
+                        <img src="#" data-th-src="${portal.assetUrl({'_path=images/mails/discord.png', '_type=absolute'})}"
+                            alt="facebook" color="#707070" width="24px" />
                     </a>
-                    <a href="https://vk.com/vecherniyekosti" title="vk"
-                        style="text-decoration: none; display: inline-block; padding: 5px; vertical-align: middle;">
-                        <img src="#" data-th-src="${portal.assetUrl({'_path=images/mails/vk.gif', '_type=absolute'})}"
-                            alt="vk" color="#707070" width="16px" />
+                    <a href="https://vk.com/vecherniyekosti" title="vk" target="_blank"
+                        style="text-decoration: none; display: inline-block; padding: 4px; vertical-align: middle;">
+                        <img src="#" data-th-src="${portal.assetUrl({'_path=images/mails/vk.png', '_type=absolute'})}"
+                            alt="vk" color="#707070" width="24px" />
                     </a>
-                    <a href="https://twitter.com/vecherniyekosti" title="twitter"
-                        style="text-decoration: none; display: inline-block; padding: 5px; vertical-align: middle;">
+                    <a href="https://twitter.com/vecherniyekosti" title="twitter" target="_blank"
+                        style="text-decoration: none; display: inline-block; padding: 4px; vertical-align: middle;">
                         <img src="#"
-                            data-th-src="${portal.assetUrl({'_path=images/mails/twitter.gif', '_type=absolute'})}"
-                            alt="twitter" color="#707070" width="16px" />
-                    </a>
-                    <a href="https://www.youtube.com/channel/UCETKVT-Uj-gAqdSTd2YNaMg" title="youtube"
-                        style="text-decoration: none; display: inline-block; padding: 5px; vertical-align: middle;">
-                        <img src="#"
-                            data-th-src="${portal.assetUrl({'_path=images/mails/youtube.gif', '_type=absolute'})}"
-                            alt="youtube" color="#707070" width="16px" />
-                    </a>
-                    <a href="https://www.instagram.com/vecherniye_kosti/" title="instagram"
-                        style="text-decoration: none; display: inline-block; padding: 5px; vertical-align: middle;">
-                        <img src="#"
-                            data-th-src="${portal.assetUrl({'_path=images/mails/instagram.gif', '_type=absolute'})}"
-                            alt="instagram" color="#707070" width="16px" style="border-radius: 2px;" />
+                            data-th-src="${portal.assetUrl({'_path=images/mails/twitter.png', '_type=absolute'})}"
+                            alt="twitter" color="#707070" width="24px" />
                     </a>
                     <a href="https://www.twitch.tv/vecherniyekosti?fbclid=IwAR0-q-e8eqtOfcn4_ZaT_Q1sDWVWn3YPrwHzXoHTIBHIFGcBd7J3gwn26K8"
-                        title="twitch"
-                        style="text-decoration: none; display: inline-block; padding: 5px; vertical-align: middle;">
+                        title="twitch" target="_blank"
+                        style="text-decoration: none; display: inline-block; padding: 4px; vertical-align: middle;">
                         <img src="#"
-                            data-th-src="${portal.assetUrl({'_path=images/mails/twitch.gif', '_type=absolute'})}"
-                            alt="twitch" color="#707070" width="16px" />
+                            data-th-src="${portal.assetUrl({'_path=images/mails/twitch.png', '_type=absolute'})}"
+                            alt="twitch" color="#707070" width="24px" />
                     </a>
-                </td>
-                <td style="color: #505050; font-family: Arial; font-size: 14px; text-align: right; padding-right: 5px;">
-                    Вечерние Кости 2020
+                    <a href="https://www.youtube.com/channel/UCETKVT-Uj-gAqdSTd2YNaMg" title="youtube" target="_blank"
+                        style="text-decoration: none; display: inline-block; padding: 4px; vertical-align: middle;">
+                        <img src="#"
+                            data-th-src="${portal.assetUrl({'_path=images/mails/youtube.png', '_type=absolute'})}"
+                            alt="youtube" color="#707070" width="24px" />
+                    </a>
+                    <a href="https://www.instagram.com/vecherniye_kosti/" title="instagram" target="_blank"
+                        style="text-decoration: none; display: inline-block; padding: 4px; vertical-align: middle;">
+                        <img src="#"
+                            data-th-src="${portal.assetUrl({'_path=images/mails/instagram.png', '_type=absolute'})}"
+                            alt="instagram" color="#707070" width="24px" style="border-radius: 2px;" />
+                    </a>
+                    <a href="https://www.facebook.com/vecherniyekosti/" title="facebook" target="_blank"
+                        style="text-decoration: none; display: inline-block; padding: 4px; vertical-align: middle;">
+                        <img src="#" data-th-src="${portal.assetUrl({'_path=images/mails/facebook.png', '_type=absolute'})}"
+                            alt="facebook" color="#707070" width="24px" />
+                    </a>
                 </td>
             </tr>
         </table>
