Fix updated mails columns

--- a/app/src/main/resources/site/pages/mails/components/footer.html
+++ b/app/src/main/resources/site/pages/mails/components/footer.html
@@ -5,11 +5,13 @@
                 <td style="color: #8A7C90; font-family: Arial; font-size: 16px; text-align: left; padding-right: 16px;">
                     © Вечерние Кости 2022
                 </td>
+            </tr>
+            <tr>
                 <td style="text-align: right;">
                     <a href="https://discord.gg/VfDthGK" title="discord" target="_blank"
                         style="text-decoration: none; display: inline-block; padding: 4px; vertical-align: middle;">
                         <img src="#" data-th-src="${portal.assetUrl({'_path=images/mails/discord.png', '_type=absolute'})}"
-                            alt="facebook" color="#707070" width="24px" />
+                            alt="discord" color="#707070" width="24px" />
                     </a>
                     <a href="https://vk.com/vecherniyekosti" title="vk" target="_blank"
                         style="text-decoration: none; display: inline-block; padding: 4px; vertical-align: middle;">
