--- a/app/src/main/resources/site/pages/mails/components/header.html
+++ b/app/src/main/resources/site/pages/mails/components/header.html
@@ -2,7 +2,7 @@
     <td style="padding: 24px 0;text-align: center;">
         <a data-th-href="${portal.pageUrl({'_path=' + site._path, '_type=absolute'})}" title="Вечерние кости" target="_blank"
             style="text-decoration: none;">
-            <img data-th-src="${portal.assetUrl({'_path=images/mails/vk_logo.png', '_type=absolute'})}" color="#fff"
+            <img data-th-src="${portal.assetUrl({'_path=images/mails/vk_logo.png', '_type=absolute'})}" alt="Vecherniye Kosti logo" color="#fff"
                 height="73px" />
         </a>
     </td>
