Update meil visual

--- a/app/src/main/resources/site/pages/mails/components/footer.html
+++ b/app/src/main/resources/site/pages/mails/components/footer.html
@@ -2,10 +2,7 @@
     <td style="background: #F7F9FC;border-radius: 0px 0px 4px 4px; padding: 32px;">
         <table border="0" cellpadding="0" cellspacing="0" width="100%">
             <tr>
-                <td style="color: #8A7C90; font-family: Arial; font-size: 16px; text-align: left; padding-right: 16px;">
-                    © Вечерние Кости 2022
-                </td>
-                <td style="text-align: right;">
+                <td style="text-align: center;">
                     <a href="https://discord.gg/VfDthGK" title="discord" target="_blank"
                         style="text-decoration: none; display: inline-block; padding: 4px; vertical-align: middle;">
                         <img src="#" data-th-src="${portal.assetUrl({'_path=images/mails/discord.png', '_type=absolute'})}"
@@ -46,6 +43,11 @@
                         <img src="#" data-th-src="${portal.assetUrl({'_path=images/mails/facebook.png', '_type=absolute'})}"
                             alt="facebook" color="#707070" width="24px" />
                     </a>
+                </td>
+            </tr>
+            <tr>
+                <td style="color: #8A7C90; font-family: Arial; font-size: 16px; text-align: center; padding-right: 16px;">
+                    © Вечерние Кости 2022
                 </td>
             </tr>
         </table>
