--- a/app/src/main/resources/site/pages/mails/components/footer.html
+++ b/app/src/main/resources/site/pages/mails/components/footer.html
@@ -1,6 +1,6 @@
 <tr>
     <td style="background: #F7F9FC;border-radius: 0px 0px 4px 4px; padding: 32px;">
-        <table border="0" cellpadding="0" cellspacing="0" width="100%">
+        <table border="0" cellpadding="0" cellspacing="0" width="100%" align="center">
             <tr>
                 <td style="text-align: center;">
                     <a href="https://discord.gg/VfDthGK" title="discord" target="_blank"
