--- a/app/src/main/resources/site/pages/components/loginRegisterModal.html
+++ b/app/src/main/resources/site/pages/components/loginRegisterModal.html
@@ -35,9 +35,9 @@
                         <span>ВХОД ЧЕРЕЗ СОЦИАЛЬНЫЕ СЕТИ</span>
                     </h5>
                     <div class="social_login-action">
-                        <button class="button social_login-fb">Facebook</button>
+                        <button class="button social_login-fb hidden">Facebook</button>
                         <button class="button social_login-twitter hidden">Twitter</button>
-                        <a data-th-href="${vkUrl}" class="button social_login-vk">Вконтакте</a>
+                        <a data-th-href="${vkUrl}" class="button social_login-vk hidden">Вконтакте</a>
                         <a data-th-href="${discordUrl}" class="button social_login-discord">Discord</a>
                         <button class="button social_login-google js_social_login-google" id="google-login">
                             Google
