--- a/frontend/app/scss/main.scss
+++ b/frontend/app/scss/main.scss
@@ -64,5 +64,6 @@
 @import "pages/myGamesStep3";
 @import "pages/myGamesStep4-5";
 @import "pages/myGamesPlayer";
+@import "pages/myGamesProfile";
 @import "pages/userArtileList";
 @import "pages/general_info";
