Add test for early acces game pages

--- a/frontend/app/scss/main.scss
+++ b/frontend/app/scss/main.scss
@@ -60,6 +60,7 @@
 @import "pages/b-meet_up";
 @import "pages/kosticonnect";
 @import "pages/kosticonnect_games";
+@import "pages/kosticonnect_game_details";
 @import "pages/myGamesStep1-2";
 @import "pages/myGamesStep3";
 @import "pages/myGamesStep4-5";
