--- a/app/src/main/resources/site/pages/user/components/userEditModal.html
+++ b/app/src/main/resources/site/pages/user/components/userEditModal.html
@@ -1,13 +1,14 @@
-<div class="modal modal-edit_user">
+<div class="modal js_edit_user-modal m-edit_user">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title">
-                    Данные профиля
+                    Настройки профиля
                 </h4>
+                <span class="icon-delete modal-close js_modal-close"></span>
             </div>
             <div class="modal-body">
-                <form class="edit_user-form js_edit_user-form">
+                <form class="edit_user-form form-group-2_up js_edit_user-form">
                     <div class="form-group">
                         <label for="displayName-user-input" class="label">Никнейм</label>
                         <input data-th-value="${user.displayName} ? ${user.displayName} : ''" name="displayName"
@@ -32,7 +33,7 @@
                     <div class="form-group" data-th-unless="${discord}">
                         <label class="label">Подключить дискорд</label>
                         <a data-th-href="${discordUrl}" class="button social_login-discord">Discord</a></div>
-                    <div class="form-group" data-th-if="${vk}">
+                    <!-- <div class="form-group" data-th-if="${vk}">
                         <label class="label">VK</label>
                         <input data-th-value="${vk.first_name + ' ' + vk.last_name}"
                             data-th-placeholder="${portal.localize({'_key=myGames.form.vk.placeholder', '_locale=ru'})}"
@@ -51,7 +52,7 @@
                     <div class="form-group" data-th-unless="${facebook}">
                         <label class="label">Facebook</label>
                         <button class="button social_login-fb">Facebook</button>
-                    </div>
+                    </div> -->
                     <div class="form-group">
                         <label for="city-user-input" class="label">Город</label>
                         <input data-th-value="${user.data.city} ? ${user.data.city} : ''" name="city" type="text"
