--- a/app/src/main/resources/site/pages/user/components/userEditModal.html
+++ b/app/src/main/resources/site/pages/user/components/userEditModal.html
@@ -14,6 +14,16 @@
                         <input data-th-value="${user.displayName} ? ${user.displayName} : ''" name="displayName"
                             type="text" class="input-text" id="displayName-user-input" />
                     </div>
+                    <div class="form-group" data-th-unless="${discord}">
+                        <label class="label">Подключить дискорд</label>
+                        <a data-th-href="${discordUrl}" class="button social_login-discord">Discord</a>
+                    </div>
+                    <div class="form-group" data-th-if="${discord}">
+                        <label class="label">Discord</label>
+                        <input data-th-value="${discord.username + ':' + discord.discriminator}"
+                            data-th-placeholder="${portal.localize({'_key=myGames.form.discord.placeholder', '_locale=ru'})}"
+                            type="text" data-ignore="true" disabled />
+                    </div>
                     <div class="form-group">
                         <label for="name-user-input" class="label">ИМЯ</label>
                         <input data-th-value="${user.data.firstName} ? ${user.data.firstName} : ''" name="firstName"
@@ -24,15 +34,6 @@
                         <input data-th-value="${user.data.lastName} ? ${user.data.lastName} : ''" name="lastName"
                             type="text" class="input-text" id="surname-user-input" />
                     </div>
-                    <div class="form-group" data-th-if="${discord}">
-                        <label class="label">Discord</label>
-                        <input data-th-value="${discord.username + ':' + discord.discriminator}"
-                            data-th-placeholder="${portal.localize({'_key=myGames.form.discord.placeholder', '_locale=ru'})}"
-                            type="text" data-ignore="true" disabled />
-                    </div>
-                    <div class="form-group" data-th-unless="${discord}">
-                        <label class="label">Подключить дискорд</label>
-                        <a data-th-href="${discordUrl}" class="button social_login-discord">Discord</a></div>
                     <!-- <div class="form-group" data-th-if="${vk}">
                         <label class="label">VK</label>
                         <input data-th-value="${vk.first_name + ' ' + vk.last_name}"
@@ -85,6 +86,12 @@
                         <label for="address-user-input" class="label">Адрес</label>
                         <input data-th-value="${user.data.address} ? ${user.data.address} : ''" name="address"
                             type="text" class="input-text" id="address-user-input" />
+                    </div>
+                    <div class="form-group">
+                        <label for="address-user-input" class="label">Билет Костиконнект2022</label>
+                        <input data-th-disabled="${user.data.kosticonnect2022 ? true : false}"
+                            data-th-value="${user.data.kosticonnect2022} ? ${user.data.kosticonnect2022} : ''"
+                            name="kosticonnect2022" type="text" class="input-text" id="kosticonnect2022-input" />
                     </div>
                     <input name="id" type="hidden" data-th-value="${user._id}" />
                     <input name="action" type="hidden" value="edit" />
