--- a/frontend/app/scss/pages/_myGamesStep4-5.scss
+++ b/frontend/app/scss/pages/_myGamesStep4-5.scss
@@ -17,6 +17,7 @@
         box-shadow: 0 2px 8px 0 #0000000a;
         line-height: 20px;
         color: #333;
+        position: relative;
     }
 
     &-short_info {
