--- a/app/src/main/resources/site/pages/user/components/gamesView.html
+++ b/app/src/main/resources/site/pages/user/components/gamesView.html
@@ -27,10 +27,12 @@
                         <div class="my_games-short_info-left">
                             <span data-th-text="${game.processed.block.processed.dayName}"></span> <span
                                 data-th-text="${game.processed.block.content.displayName}"></span>
-                            <span>
-                                <span data-th-text="${game.processed.block.processed.time.start}"></span> -
-                                <span data-th-text="${game.processed.block.processed.time.end}"></span>
+                            <span data-th-if="${game.processed.block.processed.time.end}" >
+                                <span data-th-text="${game.processed.block.processed.time.start + ' MSK'}"></span> -
+                                <span data-th-text="${game.processed.block.processed.time.end+ ' MSK'}"></span>
                             </span>
+                            <span data-th-unless="${game.processed.block.processed.time.end}"
+                                data-th-text="${game.processed.block.processed.time.start + ' MSK'}"></span>
                         </div>
                         <div class="my_games-short_info-right">
                             <a class="my_games-signed-link" data-th-href="${game.processed.url}"
