--- a/frontend/app/scss/pages/_myGamesStep1-2.scss
+++ b/frontend/app/scss/pages/_myGamesStep1-2.scss
@@ -190,7 +190,9 @@
                     display: flex;
                     flex-direction: column;
                     text-align: center;
-                    min-width: 150px;
+                    min-width: 180px;
+                    padding-right: 15px;
+                    margin-right: 15px;
 
                     @include mobile {
                         padding: 0 0 15px;
