--- a/app/src/main/resources/site/pages/user/components/gamesView.html
+++ b/app/src/main/resources/site/pages/user/components/gamesView.html
@@ -47,6 +47,7 @@
                                     <span class="my_games-action-text">Ты ведущий игры!</span> -->
                                     <span data-th-if="${game.content.data.exclusive}"
                                         class="my_games-signed-exclusive_game"><i class="icon-rock"></i> Турбо игра</span>
+                                        <button class="my_games-action-secondary button">Отписаться</button>
                                 </div>
                             </div>
                         </div>
