--- a/app/src/main/resources/site/pages/user/components/gamesView.html
+++ b/app/src/main/resources/site/pages/user/components/gamesView.html
@@ -21,9 +21,9 @@
                 </h2>
             </div>
             <ul class="my_games-game_block-list m-player_profile">
-                <li data-th-each="game : ${fest.games}" class="my_games-available-item">
-                    <!-- ADD class .m-is_gm to .my_games-available-item if user is GM of game -->
-                    <div class=" my_games-short_info">
+                <li data-th-each="game : ${fest.games}" class="my_games-available-item"
+                    data-th-classappend="${game.processed.currUserMaster ? 'm-is_gm' : ''}">
+                    <div class="my_games-short_info">
                         <div class="my_games-short_info-left">
                             <span data-th-text="${game.processed.block.processed.dayName}"></span> <span
                                 data-th-text="${game.processed.block.content.displayName}"></span>
@@ -37,14 +37,16 @@
                                 data-th-text="${game.content.displayName}"></a>
                             <div class="my_games-action-block">
                                 <div>
-                                    <span data-th-remove="tag">
+                                    <span data-th-unless="${game.processed.currUserMaster}" data-th-remove="tag">
                                         <span>Ведущий</span>
                                         <span data-th-text="${game.processed.master.data.firstName}"></span>
                                     </span>
-                                    <!-- Show next span if user is GM of game
-                                    <span class="my_games-action-text">Ты ведущий игры!</span> -->
+                                    <span data-th-if="${game.processed.currUserMaster}" class="my_games-action-text">
+                                        Ты ведущий игры!
+                                    </span>
                                     <span data-th-if="${game.content.data.exclusive}"
-                                        class="my_games-signed-exclusive_game"><i class="icon-rock"></i> Турбо игра</span>
+                                        class="my_games-signed-exclusive_game"><i class="icon-rock"></i> Турбо
+                                        игра</span>
                                 </div>
                             </div>
                         </div>
