Add text for sign to game form & link to games

--- a/app/src/main/resources/site/pages/user/components/gamesView.html
+++ b/app/src/main/resources/site/pages/user/components/gamesView.html
@@ -64,7 +64,13 @@
             </ul>
         </div>
     </div>
+    <h3 class="my_games-gm-header" style="margin-top: 25px;">
+        <a target="_blank" href="/kosticonnect/igry">Здесь</a> вы можете записаться на игру онлайн фестиваля KostiСONnect-2022.
+    </h3>
 </div>
 <div class="blog-list-empty js_blog-list-empty" data-th-unless="${hasGames}">
     Игр пока нет.
+    <h3 style="margin-top: 25px;">
+        <a target="_blank" href="/kosticonnect/igry">Здесь</a> вы можете записаться на игру онлайн фестиваля KostiСONnect-2022.
+    </h3>
 </div>
