--- a/app/src/main/resources/site/pages/user/components/gamesView.html
+++ b/app/src/main/resources/site/pages/user/components/gamesView.html
@@ -65,12 +65,12 @@
         </div>
     </div>
     <h3 class="my_games-gm-header" style="margin-top: 25px;">
-        <a target="_blank" href="/kosticonnect/igry">Здесь</a> вы можете записаться на игру онлайн фестиваля KostiСONnect-2022.
+        <a target="_blank" href="/kosticonnect/igry">Здесь</a> вы можете записаться на игры онлайн фестиваля KostiСONnect-2022.
     </h3>
 </div>
 <div class="blog-list-empty js_blog-list-empty" data-th-unless="${hasGames}">
     Игр пока нет.
     <h3 style="margin-top: 25px;">
-        <a target="_blank" href="/kosticonnect/igry">Здесь</a> вы можете записаться на игру онлайн фестиваля KostiСONnect-2022.
+        <a target="_blank" href="/kosticonnect/igry">Здесь</a> вы можете записаться на игры онлайн фестиваля <span style="white-space: nowrap;">KostiСONnect-2022.</span>
     </h3>
 </div>
